--- a/latex/bibliography.bib
+++ b/latex/bibliography.bib
@@ -182,6 +182,14 @@
   organization={ACM}
 }
 
+@book{wu2011experiments,
+  title={Experiments: planning, analysis, and optimization},
+  author={Wu, CF Jeff and Hamada, Michael S},
+  volume={552},
+  year={2011},
+  publisher={John Wiley \& Sons}
+}
+
 @article{goldberg2015,
   title={Two Large Open-Access Datasets for Fitts’ Law of Human Motion and a Succinct Derivation of the Square-Root Variant},
   author={Goldberg, Ken and Faridani, Siamak and Alterovitz, Ron},
@@ -229,9 +237,9 @@
 }
 
 @book{legendre1805,
-author={Adrien-Marie Legendre},
-title={Nouvelles méthodes pour la détermination des orbites des comètes},
-year={1805},
-editor={F. didot}
+  author={Adrien-Marie Legendre},
+  title={Nouvelles méthodes pour la détermination des orbites des comètes},
+  year={1805},
+  editor={F. didot}
 }
 
