--- a/latex/main.tex
+++ b/latex/main.tex
@@ -6,6 +6,16 @@
 
 \addcontentsline{toc}{chapter}{Indledning}
 \chapter*{Indledning}
+Fitts' Lov beskriver sammenhængen mellem en motorisk opgaves fart og præcision. Den blev første gang beskrevet af Paul M. Fitts i \cite{fitts1954} i 1954. Her udførte Fitts' tre eksperimenter, hvor 16 testpersoner udførte simple bevægelsesopgaver. Fitts brugte resultaterne fra de tre eksperimenter til at finde en formel, som beskriver tiden det tager at udføre en opgave i forhold til opgavens sværhedsgrad, beskrevet som \textit{}Index of Difficulty}
+
+Udformningen af nærmest alle bruger-interfaces kan forbedres af intuitive matematiske modeller for det menneskelige motoriske system. Forholdet mellem bevægelsers fart og præcision blev første gang påvist af Paul M. Fitts i \cite{fitts1954} i 1954. Siden da har flere udgivelser prøvet at forbedre den originale formel, blandt andet \cite{crossman1957}, \cite{welford1968}, \cite{meyer1988}, \cite{mackenzie1992} og \cite{accot1997}.\\
+
+
+
+
+I 1954 udgav Paul M. Fitts \cite{fitts1954} som søgte at finde informationskapaciteten af det menneskelige motoriske system. Fitts så et behov for et samlende begreb for den menneskelige motoriske kapacitet, grundet de tydelige problemer med at forene mange af de fakta, der var blevet beskrevet i tidligere litteratur. Hans forklaring var, at der var blevet overset en overordnet sammenhæng mellem amplituden, varigheden og variabiliteten i bevægelserne ved motoriske opgaver.\\
+Siden udgivelsen af \cite{fitts1954} har der været flere forslag til forbedringer af den originale formel, blandt andet beskrevet i \cite{}
+
 
 \section*{Noter}
 Længere indledning! - meget længere.
@@ -20,7 +30,7 @@ Hvad vi gør, hvordan gør vi det anderledes?
 	\item If you're successful, what difference will it make?
 \end{itemize}~\\
 
-I 1954 udgav Paul M. Fitts en artikel\footcite{fitts1954} som søgte at finde informationskapaciteten af det menneskelige motoriske system - og dermed en generel formulering for sammenhængen mellem distancen til og størrelsen af et mål i en motorisk opgave og den tid det tager at udføre opgaven. Fitts så et behov for et samlende begreb for den menneskelige motoriske kapacitet, grundet de tydelige problemer med at forene mange af de fakta, der var blevet beskrevet i tidligere litteratur. Hans forklaring var, at der var blevet overset en overordnet sammenhæng mellem amplituden, varigheden og variabiliteten i bevægelserne ved motoriske opgaver.
+I 1954 udgav Paul M. Fitts en artikel\footcite{fitts1954} som søgte at finde informationskapaciteten af det menneskelige motoriske system - og dermed en generel formulering for sammenhængen mellem distancen til og størrelsen af et mål i en motorisk opgave og den tid det tager at udføre opgaven. 
 
 
 
