--- a/latex/main.tex
+++ b/latex/main.tex
@@ -484,7 +484,7 @@ I dette afsnit vil vi analysere den indsamlede data ved brug af både kvantitati
 \section*{Modeludvælgelse}
 Som det kan ses af de fire formuleringer for Fitts' lov, så kan de alle sammen opfattes som affine modeller, med tiden $T$ som y-variabel og ID som x-variabel. Bemærk, at Welfords formel har en skæring med y-aksen i 0, dvs. $y=b\cdot x$.\\
 For at kunne finde ud af hvilken af de fire lineære modeller der beskriver vores data bedst, har vi valgt at tage udgangspunkt i \cite{wu2011experiments} der refererer til tre modeludvælgelseskriterier som værende almindeligt anvendte. Denne bog er citeret af 1624 forskellige bøger og artikler, hvilket understøtter vores valg af denne som troværdig kilde.\\
-I \cite{wu2011experiments} afsnit \textit{1.7 VARIABLE SELECTION IN REGRESSION ANALYSIS} bliver $C_p$, $AIC$ og $BIC$ beskrevet som almindeligt anvendte, og der bliver refereret til Ockhams ragekniv som værende et godt udgangspunkt ved modeludvælgelse, da det oftest er den simpleste model der passer bedst. Dette har vi brugt til selv at vælge $LSE$, da denne er simpel, og derfor er understøttet som metode, af Ockhams ragekniv.
+I \cite{wu2011experiments} afsnit1.7 bliver $C_p$, $AIC$ og $BIC$ beskrevet som almindeligt anvendte, og der bliver refereret til Ockhams ragekniv som værende et godt udgangspunkt ved modeludvælgelse, da det oftest er den simpleste model der passer bedst. Dette har vi brugt til selv at vælge $LSE$, da denne er simpel, og derfor er understøttet som metode, af Ockhams ragekniv.
 \begin{itemize}
 \item{Least Squared Errors (LSE) \cite{legendre1805}.}
 \item{Mallow's $C_p$ \cite{mallow1973}.}
