--- a/latex/main.tex
+++ b/latex/main.tex
@@ -6,7 +6,7 @@
 
 \addcontentsline{toc}{chapter}{Indledning}
 \chapter*{Indledning}
-Fitts' Lov beskriver sammenhængen mellem en motorisk opgaves fart og præcision. Den blev første gang beskrevet af Paul M. Fitts i \cite{fitts1954} i 1954. Her udførte Fitts' tre eksperimenter, hvor 16 testpersoner udførte simple bevægelsesopgaver. Fitts brugte resultaterne fra de tre eksperimenter til at finde en formel, som beskriver tiden det tager at udføre en opgave i forhold til opgavens sværhedsgrad, beskrevet som \textit{}Index of Difficulty}
+Fitts' Lov beskriver sammenhængen mellem en motorisk opgaves fart og præcision. Den blev første gang beskrevet af Paul M. Fitts i \cite{fitts1954} i 1954. Her udførte Fitts' tre eksperimenter, hvor 16 testpersoner udførte simple bevægelsesopgaver. Fitts brugte resultaterne fra de tre eksperimenter til at finde en formel, som beskriver tiden det tager at udføre en opgave i forhold til opgavens sværhedsgrad, beskrevet som \textit{Index of Difficulty}
 
 Udformningen af nærmest alle bruger-interfaces kan forbedres af intuitive matematiske modeller for det menneskelige motoriske system. Forholdet mellem bevægelsers fart og præcision blev første gang påvist af Paul M. Fitts i \cite{fitts1954} i 1954. Siden da har flere udgivelser prøvet at forbedre den originale formel, blandt andet \cite{crossman1957}, \cite{welford1968}, \cite{meyer1988}, \cite{mackenzie1992} og \cite{accot1997}.\\
 
